--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -54,7 +54,9 @@
     "recommendations": "التوصيات"
   },
   "viewpersonality": {
-    "personality_traits": "السمات الرئيسية الخمسة للشخصية"
+    "personality_traits": "السمات الرئيسية الخمسة للشخصية",
+    "score": "الدرجة",
+    "description":"الوصف"
   },
   "personality": {
     "extraversion": {
@@ -65,8 +67,8 @@
       "title": "الضمير الحي",
       "description": "الضمير هو صفة شخصية رئيسية تعكس ميل الفرد إلى أن يكون منظمًا، مسؤولًا، وموجهًا نحو الأهداف. يُعرف الأشخاص الذين يتمتعون بمستوى عالٍ من الضمير بموثوقيتهم، اجتهادهم، واهتمامهم بالتفاصيل؛ غالبًا ما يكونون جادين في عملهم، يتابعون مهامهم، ويكونون مستعدين جيدًا.\n\nلقد كشف Unveels عن الجانب الضميري في شخصيتك؛ وهذه هي قائمة التوصيات الخاصة بك بناءً عليه."
     },
-    "opennesstoexperience": {
-      "title": "الانفتاح على التجربة",
+    "openness": {
+      "title": "الانفتاح",
       "description": "الأشخاص ذوو الشخصية المنفتحة معروفون بخيالهم الواسع، فضولهم، ورغبتهم في استكشاف الأفكار والتجارب الجديدة. لديك رغبة قوية في التنوع والابتكار، وتكون منفتحًا على وجهات النظر المختلفة وطرق التفكير المتنوعة. بفضل سمة الانفتاح، تميل إلى أن تكون مبدعًا، مرنًا، وقابلًا للتكيف وغالبًا ما تتقبل التغيير والابتكار.\nأنت مهووس باكتشاف الثقافات والمفاهيم والفرص الجديدة، ومستعد لتحدي الأعراف والمعتقدات التقليدية. بشكل عام، يجلب الأشخاص ذوو الشخصية المنفتحة شعورًا بالدهشة والحماس إلى تفاعلاتهم ومساعيهم. لذلك، هذه قائمة التوصيات من Unveels بناءً على شخصيتك المنفتحة."
     },
     "agreeableness": {
@@ -108,7 +110,7 @@
     },
     "lips": {
       "title": "الشفاه",
-      "lipattribute": {
+      "lipsattribute": {
         "lipshape": "شكل الشفاه",
         "lipcolor": "لون الشفاه"
       }
@@ -116,7 +118,7 @@
     "cheekbones": {
       "title": "عظام الوجنتين",
       "cheekbonesattribute": {
-        "checkbones": "عظام الوجنتين"
+        "cheeckbones": "عظام الوجنتين"
       }
     },
     "nose": {
@@ -142,7 +144,7 @@
     "medium": "متوسط",
     "sparse": "متفرق"
   },
-  "nosewidth_labels": {
+  "nosewidthlabels": {
     "broad": "عريض",
     "medium": "متوسط",
     "narrow": "ضيق"
@@ -153,13 +155,13 @@
     "short": "قصير"
   },
   "liplabels": {
-    "fulllips": "شفاه ممتلئة",
-    "heartlips": "شفاه على شكل قلب",
-    "heavylowerlips": "شفاه سفلية ثقيلة",
-    "heavyupperlips": "شفاه علوية ثقيلة",
-    "roundlips": "شفاه مستديرة",
-    "thinlips": "شفاه رقيقة",
-    "widelips": "شفاه عريضة"
+    "full_lips": "شفاه ممتلئة",
+    "heart_lips": "شفاه على شكل قلب",
+    "heavylower_lips": "شفاه سفلية ثقيلة",
+    "heavyupper_lips": "شفاه علوية ثقيلة",
+    "round_lips": "شفاه مستديرة",
+    "thin_lips": "شفاه رقيقة",
+    "wide_lips": "شفاه عريضة"
   },
   "faceshapelabels": {
     "heart": "قلب",
@@ -167,19 +169,19 @@
     "round": "دائري",
     "square": "مربع"
   },
-  "eyelidlabels": {
-    "doublelids": "جفون مزدوجة",
+  "eyelidLabels": {
+    "double_lids": "جفون مزدوجة",
     "monolids": "جفن واحد"
   },
   "eyebrowshapelabels": {
     "curved": "منحني",
-    "highArch": "قوس عالي",
-    "sShaped": "على شكل S",
-    "softArch": "قوس ناعم",
+    "high_arch": "قوس عالي",
+    "s_shaped": "على شكل S",
+    "soft_arch": "قوس ناعم",
     "straight": "مستقيم",
     "upward": "صاعد"
   },
-  "eyebrowDistanceLabels": {
+  "eyebrowdistanceLabels": {
     "close": "قريب",
     "proportioned": "متناسب",
     "wide": "واسع"
@@ -198,9 +200,9 @@
     "hooded": "مغطى"
   },
   "eyedistanceLabels": {
-    "averageSet": "متوسط المسافة",
-    "closeSet": "متقارب",
-    "wideSet": "متباعد"
+    "average_set": "متوسط المسافة",
+    "close_set": "متقارب",
+    "wide_set": "متباعد"
   },
   "eyeangleLabels": {
     "downturned": "منخفض",
@@ -208,8 +210,29 @@
     "upturned": "مرتفع"
   },
   "cheeksbonesLabels": {
-    "highCheeks": "عظام خد عالية",
-    "lowCheeks": "عظام خد منخفضة",
-    "roundCheeks": "خدود مستديرة"
-  }
+    "high_cheeks": "عظام خد عالية",
+    "low_cheeks": "عظام خد منخفضة",
+    "round_Cheeks": "خدود مستديرة"
+  },
+  "hairLabels": {
+    "long": "طويل",
+    "normal": "عادي",
+    "short": "قصير"
+  },
+  "personalityLabels": {
+    "extravert": "منفتح",
+    "neurotic": "عصبي",
+    "agreeable": "ودود",
+    "conscientious": "يقظ",
+    "open": "منفتح الذهن"
+  },
+  "personalityAnalysisResult": [
+    "الأشخاص ذو الشخصية المنفتحة اجتماعيون، نشيطون، ويحبون التحدث. يزدهرون في الأوساط الاجتماعية، يسعون إلى الإثارة، ويستمتعون بأن يكونوا مركز الاهتمام. يمتازون بمهارات تواصل، قيادة، وبناء علاقات قوية. Unveels يقترح توصيات بناءً على مستوى انفتاحك.",
+    "يعكس العصابية ميلاً نحو تجربة المشاعر السلبية مثل القلق والاكتئاب وتقلب المزاج. قد يكون الأشخاص المرتفعون في العصابية أكثر عرضة للقلق والضغط، في حين أن أولئك الذين يتمتعون بمستوى عصابي منخفض أكثر استقراراً ومرونة عاطفياً. Unveels يقدم قائمة توصيات مخصصة بناءً على مستوى عصابيتك.",
+    "الأشخاص ذو الشخصية المتوافقة طيبون ومتعاطفون، يتميزون برغبة قوية في الحفاظ على العلاقات الودية. هم متعاونون ومتفاهمون ويهتمون بالآخرين، مما يجعلهم أعضاء فريق قيمين وأصدقاء داعمين. Unveels أعدّ قائمة توصيات مخصصة بناءً على شخصيتك المتوافقة.",
+    "الأشخاص المرتفعون في الضمير التنظيمي منظمون، يتحملون المسؤولية، ويحققون أهدافهم. يتميزون بالموثوقية والاجتهاد والانتباه للتفاصيل، ويكونون مجتهدين في عملهم ومستعدين جيداً. Unveels قد كشف الجانب التنظيمي في شخصيتك ويوفر قائمة توصيات بناءً عليه.",
+    "الأشخاص ذو الشخصية المنفتحة يتمتعون بخيال واسع، فضول، واستعداد لاستكشاف أفكار وتجارب جديدة. هم مبدعون ومرنون وقابلون للتكيف، ويستقبلون التغيير والابتكار. Unveels قد أعدّ قائمة توصيات بناءً على شخصيتك المنفتحة."
+]
+
+  
 }
