--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -56,7 +56,14 @@
   "viewpersonality": {
     "personality_traits": "السمات الرئيسية الخمسة للشخصية",
     "score": "الدرجة",
-    "description":"الوصف"
+    "description":"الوصف",
+    "perfumerec": "توصيات العطور",
+    "addcart": "أضف إلى السلة",
+    "seeimprovement": "عرض التحسين",
+    "lookrec": "توصيات المظهر",
+    "lookdec": "أحمر شفاه جريء وحواجب محددة يعكسان شخصيتك القوية والحيوية",
+    "lipcolorrec": "توصيات ألوان الشفاه",
+    "lipcolordec": "أفضل ألوان الشفاه لك هي الدرجات البرتقالية"
   },
   "personality": {
     "extraversion": {
@@ -232,7 +239,7 @@
     "الأشخاص ذو الشخصية المتوافقة طيبون ومتعاطفون، يتميزون برغبة قوية في الحفاظ على العلاقات الودية. هم متعاونون ومتفاهمون ويهتمون بالآخرين، مما يجعلهم أعضاء فريق قيمين وأصدقاء داعمين. Unveels أعدّ قائمة توصيات مخصصة بناءً على شخصيتك المتوافقة.",
     "الأشخاص المرتفعون في الضمير التنظيمي منظمون، يتحملون المسؤولية، ويحققون أهدافهم. يتميزون بالموثوقية والاجتهاد والانتباه للتفاصيل، ويكونون مجتهدين في عملهم ومستعدين جيداً. Unveels قد كشف الجانب التنظيمي في شخصيتك ويوفر قائمة توصيات بناءً عليه.",
     "الأشخاص ذو الشخصية المنفتحة يتمتعون بخيال واسع، فضول، واستعداد لاستكشاف أفكار وتجارب جديدة. هم مبدعون ومرنون وقابلون للتكيف، ويستقبلون التغيير والابتكار. Unveels قد أعدّ قائمة توصيات بناءً على شخصيتك المنفتحة."
-]
+  ]
 
   
 }
