--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -58,8 +58,14 @@
   "viewpersonality": {
     "personality_traits": "Main 5 Personality Traits",
     "score":"Score",
-    "description":"Description"
-
+    "description":"Description",
+    "perfumerec":"Perfumes Recommendations",
+    "addcart":"ADD TO CART",
+    "seeimprovement":"SEE IMPROVEMENT",
+    "lookrec":"Look Recommendations",
+    "lookdec":" A bold red lipstick and defined brows, mirror your strong, vibrant personality",
+    "lipcolorrec":"Lip Color Recommendations",
+    "lipcolordec":"The best lip color for you are orange shades"
   },
   "personality": {
     "extraversion": {
@@ -82,9 +88,6 @@
       "title": "Neuroticism",
       "description": "Description for Neuroticism..."
     }
-  },
-  "analysisResult":{
-
   },
   "attributepf": {
     "face": {
@@ -231,6 +234,14 @@
     "agreeable": "Agreeable",
     "conscientious": "Conscientious",
     "open": "Open"
-  }
+  },
+  "personalityAnalysisResult": [
+    "Individuals with an extravert personality are outgoing, energetic, and talkative. They thrive in social settings, seek excitement, and enjoy being the center of attention. Strong in communication, leadership, and relationship-building skills, Unveels suggests recommendations based on your extraversion.",
+    "Neuroticism reflects a tendency to experience negative emotions like anxiety, depression, and moodiness. People high in neuroticism may be more prone to worry and stress, while those low in neuroticism are more emotionally stable and resilient. Unveels offers a bespoke recommendation list based on your neuroticism.",
+    "People with an agreeable personality are kind-hearted and compassionate, characterized by a strong desire to maintain harmonious relationships. They are cooperative, empathetic, and considerate towards others, making them valuable team players and supportive friends. Unveels has prepared a customized recommendation list based on your agreeable personality.",
+    "Individuals high in conscientiousness are organized, responsible, and goal-oriented. Known for their reliability, diligence, and attention to detail, they are diligent in their work and well-prepared. Unveels has unveiled the conscientious side of your personality and provides a recommended list based on it.",
+    "Individuals with an open personality possess a vibrant imagination, curiosity, and eagerness to explore new ideas and experiences. They are creative, flexible, and adaptable, receptive to change and innovation. Unveels has prepared a recommendation list based on your open personality."
+  ]
+
 
 }
