find the look done

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -23,6 +23,47 @@
     "matched": "ظلال متطابقة",
     "other": "ظلال أخرى"
   },
+  "camera_select": {
+    "live": {
+      "title": "كاميرا مباشرة",
+      "desc": {
+        "text": "أمسك بالكاميرا بشكل موازٍ للوجه...",
+        "h4": "الخطوات المتبعة",
+        "li1": "اختر صورة أو فيديو عالي الجودة للجسم العلوي فقط.",
+        "li2": "تأكد من أن الوجه بالكامل في مركز الإطار.",
+        "li3": "ضع الكاميرا على مستوى العين مع الوجه.",
+        "li4": "حافظ على ثبات الكاميرا وتجنب الميل.",
+        "li5": "تأكد من أن المنطقة مضاءة بشكل جيد لاكتشاف واضح.",
+        "li6": "تجنب الظلال على الوجه باستخدام إضاءة ناعمة ومتوازنة.",
+        "btn": "استخدام الكاميرا المباشرة"
+      }
+    },
+    "snap": {
+      "title": "التقط صورة",
+      "desc": {
+        "text": "اكتشف إمكانيات صورك المفضلة مع ميزة تحميل الصور لدينا.",
+        "h4": "الخطوات المتبعة",
+        "li1": "التقط صورة واضحة وعالية الدقة للحصول على أفضل النتائج.",
+        "li2": "تأكد من أن الجسم العلوي بالكامل مرئي في الصورة.",
+        "li3": "التقط صورة بإضاءة متوازنة وظلال قليلة.",
+        "li4": "تأكد من أن الصورة تحتوي على شخص واحد فقط لتحليل دقيق.",
+        "btn": "تحميل الصورة"
+      }
+    },
+    "upload": {
+      "title": "تحميل صورة أو فيديو",
+      "desc": {
+        "text": "استمتع برفاهية التحول مع ميزة تحميل الفيديو لدينا.",
+        "h4": "الخطوات المتبعة",
+        "li1": "اختر صورة أو فيديو عالي الجودة للجسم العلوي فقط.",
+        "li2": "تأكد من أن الصورة أو الفيديو ثابتين وغير مهتزّين.",
+        "li3": "تأكد من أن المظهر بأكمله مرئي.",
+        "li4": "اختر صورة أو فيديو بإضاءة ساطعة ومتوازنة وظلال قليلة.",
+        "li5": "تأكد من أن الصورة أو الفيديو يحتويان على شخص واحد فقط لتحديد دقيق.",
+        "btn": "تحميل صورة/فيديو"
+      }
+    }
+  },
   "skin_types": {
     "fair": "فاتح جداً",
     "light": "فاتح",
@@ -254,10 +295,32 @@
     "view_all": "عرض الكل",
     "try_now": "جرب الآن",
     "add_all_to_cart": "أضف الكل إلى السلة",
-    "try_on": "جربه"
+    "try_on": "جربه",
+    "select": "اختر",
+    "similar": "مشابه",
+    "page": "كيف تريد العثور على المظهر"
   },
   "tabOptionsftl": {
     "makeup": "مكياج",
     "accessories": "إكسسوارات"
+  },
+  "categories_label": {
+    "Headband": "رباط رأس",
+    "Hat": "قبعة",
+    "Cap": "قبعة رياضية",
+    "Lipstick": "أحمر شفاه",
+    "Mascara": "مسكارا",
+    "Blusher": "أحمر خدود",
+    "Highlighter": "هايلايتر",
+    "Eyecolor": "لون العين",
+    "Glasses": "نظارات",
+    "Sunglasses": "نظارات شمسية",
+    "Watch": "ساعة",
+    "Bracelet": "سوار",
+    "earring": "قرط",
+    "Necklace": "قلادة",
+    "Neckless": "عقد",
+    "Scarf": "وشاح",
+    "rings": "خواتم"
   }
 }
