skin analysis done

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -334,25 +334,29 @@
     "detected": "مكتشف",
     "description": "الوصف",
     "recomend": "المنتجات الموصى بها",
-    "score": "الدرجة"
+    "score": "الدرجة",
+    "addcart": "أضف إلى السلة",
+    "seeimprovement": "عرض التحسين",
+    "Less": "أقل",
+    "Readmore": "اقرأ المزيد"
   },
   "skinlabel": {
-    "radiance": "التألق",
+    "radiance": "الإشراق",
     "texture": "الملمس",
-    "moistures": "الرطوبة",
+    "moisture": "الرطوبة",
     "whitehead": "الرؤوس البيضاء",
     "blackhead": "الرؤوس السوداء",
     "acne": "حب الشباب",
     "spots": "البقع",
-    "pore": "المسامات",
+    "pores": "المسام",
     "wrinkles": "التجاعيد",
-    "droopy eyelid upper": "جفن علوى مترهل",
-    "droopy eyelid lower": "جفن سفلي مترهل",
-    "eyebag": "انتفاخات تحت العين",
-    "skinredness": "احمرار الجلد",
-    "oily": "دهنية",
+    "droopy upper eyelid": "تدلي الجفن العلوي",
+    "droopy lower eyelid": "تدلي الجفن السفلي",
+    "eyebags": "أكياس تحت العين",
+    "redness": "الاحمرار",
+    "oily": "دهني",
     "firmness": "الشد",
-    "dark circle": "الهالات السوداء",
+    "dark circles": "الهالات السوداء",
     "dry": "جاف"
   }
 }
